[gd_scene load_steps=6 format=3 uid="uid://c7d8faf0g1h2i"]

[ext_resource type="Script" path="res://src/entities/minions/turret.gd" id="1_turret_script"]
[ext_resource type="Resource" uid="uid://player_hit_spark_tres" path="res://src/core/data/effects/player_hit_spark_effect.tres" id="2_hit_spark_effect"]
[ext_resource type="Resource" uid="uid://turret_archetype_resource" path="res://src/entities/archetypes/turret_archetype.tres" id="3_archetype"]
[ext_resource type="Script" path="res://src/entities/minions/states/state_turret_idle.gd" id="4_state_idle"]
[ext_resource type="Script" path="res://src/entities/minions/states/state_turret_attack.gd" id="5_state_attack"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_turretbody"]
size = Vector2(50, 50)

[node name="Turret" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 131
script = ExtResource("1_turret_script")
archetype = ExtResource("3_archetype")
hit_spark_effect = ExtResource("2_hit_spark_effect")

; State Scripts
state_idle_script = ExtResource("4_state_idle")
state_attack_script = ExtResource("5_state_attack")

[node name="Visual" type="Polygon2D" parent="."]
color = Color(0.490196, 0.490196, 0.490196, 1)
polygon = PackedVector2Array(-25, -25, 25, -25, 25, 25, -25, 25)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_turretbody")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="RangeDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeDetector"]

[connection signal="body_entered" from="RangeDetector" to="." method="_on_range_detector_body_entered"]
[connection signal="body_exited" from="RangeDetector" to="." method="_on_range_detector_body_exited"]